--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,130 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap');
+
+:root {
+  --color-background-logo: #FF6584;
+  --color-background-nav: #ff6584a1;
+}
+
+* {
+  overflow-x: none;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Noto Sans', sans-serif;
+  color: #1D3C58;
+}
+
+body {
+  height: 100vh !important;
+}
+
+
+.bg-biblioteca {
+  background-image: url(/biblioteca-background.svg);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-attachment: fixed;
+  background-size: contain;
+}
+
+.bg-diagnosticos {
+  background-image: url(/diagnosticos-background.svg);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-attachment: fixed;
+  background-size: 60%;
+}
+
+body::before {
+  top: -110px;
+  left: -40px;
+  width: 300px;
+  aspect-ratio: 1/1;
+  position: absolute;
+  z-index: -1;
+  content: ' ';
+  border-radius: 100%;
+  background-color: var(--color-background-logo);
+}
+
+.navLink:hover::before {
+  content: ' ';
+  width: 50px;
+  height: 50px;
+  background-color: var(--color-background-nav);
+  border-radius: 100%;
+  position: absolute;
+  z-index: -1;
+}
+
+.navLink.activeRoute::before {
+  content: ' ';
+  width: 50px;
+  height: 50px;
+  background-color: var(--color-background-nav);
+  border-radius: 100%;
+  position: absolute;
+  z-index: -1;
+}
+
+main {
+  padding: 1rem 10vw;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 * {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+
+
+/* Buttons */
+
+
+@media only screen and (max-width: 768px) {
+  button {
+    padding: 0.5rem 1rem;
+    font-size: 0.8rem;
   }
-  body {
-    color: white;
-    background: black;
+}
+
+
+button:hover {
+  filter: brightness(90%);
+}
+
+button:disabled,
+button[disabled] {
+  filter: brightness(80%);
+  cursor: not-allowed;
+}
+
+
+/* Loader */
+
+.loader {
+  border: 10px solid var(--color-bg);
+  border-top: 10px solid var(--color-blue);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
